--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -10,4 +10,7 @@
 	<%= link_to "Create a New Article", new_article_path, class: 'new_article'%>
    </li>
 
+	<li>
+   		<%= link_to "Browse tags", tags_path %>
+	</li>
 </ul>
