--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,16 +1,21 @@
 <h1>All Articles</h1>
 
 <ul id="articles">
+	<li>
+	<%= link_to "Create a New Article", new_article_path, class: 'new_article'%>
+
+   </li>
+
+
   <% @articles.each do |article| %>
     <li>
       <%= link_to article.title, article_path(article), class: 'article_title' %>
     </li>
-    <li>
+    
     <% end %>
-	<%= link_to "Create a New Article", new_article_path, class: 'new_article'%>
-   </li>
-
-	<li>
-   		<%= link_to "Browse tags", tags_path %>
+    <br>
+    <li>
+    	<%= link_to "Browse tags", tags_path, class: 'new_article' %>
 	</li>
+	</br>
 </ul>
