--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -5,12 +5,21 @@
     <%= link_to tag.name, tag_path(tag) %>
   <% end %>
 </p>
+<br>
+</br>
+
+<p><% if @article.image.exists? %>
+      <%= image_tag @article.image.url %><br/>
+      <% end %>
+</p>
 
 <p><%= @article.body %></p>
-<%= link_to "delete", article_path(@article), method: :delete, data: {confirm: "Really delete the article?"} %>
-
+<br>
+</br>
+<li>
+<%= link_to "delete", article_path(@article), method: :delete, data: {confirm: "Really delete the article?"} %> 
 <%= link_to "edit", edit_article_path(@article) %>
-
+</li>
  <h3>Comments (<%= @article.comments.size %>)</h3>
  <%= render partial: 'articles/comment', collection: @article.comments %>
  <%= render partial: 'comments/form' %>
