--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -20,7 +20,8 @@
 <%= link_to "delete", article_path(@article), method: :delete, data: {confirm: "Really delete the article?"} %> 
 <%= link_to "edit", edit_article_path(@article) %>
 </li>
- <h3>Comments (<%= @article.comments.size %>)</h3>
+ <h3>Comments (<%= @article.comments.size %>)</h3> 
+ <%= "#{@article.impressionist_count} views so far!" %>
  <%= render partial: 'articles/comment', collection: @article.comments %>
  <%= render partial: 'comments/form' %>
 <%= link_to "<< Back to Articles List", articles_path %>
