--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -21,7 +21,7 @@
 <%= link_to "edit", edit_article_path(@article) %>
 </li>
  <h3>Comments (<%= @article.comments.size %>)</h3> 
- <%= "#{@article.impressionist_count} views so far!" %>
+ <%= "This article has #{@article.impressionist_count} views" %>
  <%= render partial: 'articles/comment', collection: @article.comments %>
  <%= render partial: 'comments/form' %>
 <%= link_to "<< Back to Articles List", articles_path %>
