--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -4,6 +4,7 @@
     <li><%= error %></li>
   <% end %>
   </ul>
+  <%= f.text_field 'glue', 'headline', :size => 80, :style=>"background-color : #52ABB8"%>
   <p>
     <%= f.label :title %><br />
     <%= f.text_field :title %>
