--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,23 +1,26 @@
 <h1>All Blogs</h1>
 
-<ul id="articles">
-  <li>
-  <%= link_to "Create a New Blog", new_article_path, class: 'new_article'%>
-   </li>
+<div id="articles">
+    
+
+   <%= button_to "Create a New Blog", { :action => "new" }, :method => :get %>
+   <%= button_to "Browse tags", tags_path, :method => :get %>
+ 
 <br>
 </br>
 <% blogs = Article.all.sort_by {|article| article.impressionist_count}.reverse %>
-<h2> <b>Current Top 3 blogs:</b> </h2>
-<table class="<%= 'big_table' -%>">
+<h2 align="center"> <b>Current Top 3 blogs:</b> </h2>
+<table id="table1">
+
    <tr class="<%= 'header' -%>">
    <th><b>Title</b></th>
-   <th><b>Views</b></th>
+   <th id="count"><b>Views</b></th>
   </tr>
   <%if blogs.size != 0 %>
     <% blogs.each do |article| %>
       <tr class="<%= 'blog' -%>">
       <td><%= link_to article.title, article, class: 'article_title' %> </td>
-      <td><%= article.impressionist_count%> </td>
+      <td id="count"><%= article.impressionist_count%></td>
       </tr>
 
     <% end %>
@@ -38,9 +41,4 @@
 
   <br>
  </br>
-    <br>
-      <li>
-        <%= link_to "Browse tags", tags_path, class: 'new_article' %>
-    </li>
-  </br>
-</ul>
+</div>
