changes to front page and fixed link names

--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -31,5 +31,5 @@
   <p>
     <%= f.submit %>
   </p>
-  <%= link_to "<< Back to Articles List", articles_path %>
+  <%= link_to "<< Back to Blogs List", articles_path %>
 <% end %>
