--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,4 +1,4 @@
-<h1>All Blogs</h1>
+<h1>My Beautiful Blog Page </h1>
 
 <div id="articles">
     
@@ -30,7 +30,7 @@
 </table>
 <br>
 </br>
-<h2><b>Blog list:</b></h2>
+<h1><b>Blog list:</b></h1>
   <% @articles.each do |article| %>
 
     <li>
